custom tab spacing fixed

--- a/src/styles/Generator.css
+++ b/src/styles/Generator.css
@@ -69,7 +69,7 @@
   font-weight: 800;
   font-size: 16px;
   letter-spacing: 1px;
-  padding: 1rem 0rem 0.5rem 0rem;
+  padding: 1.5rem 0rem 0.5rem 0rem;
 }
 
 .p {
@@ -168,8 +168,6 @@
 }
 
 .chooser1 {
-  display: grid;
-  align-items: center;
-  justify-content: center;
+  width: 31rem;
 }
 
